scroll bar style

--- a/crwn-clothing/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/crwn-clothing/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -15,7 +15,27 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-x: scroll;
+
+    /* width */
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: #ffffff;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: #ffffff;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: #ffffff;
+    }
   }
 
   button {
